--- a/index.html
+++ b/index.html
@@ -36,12 +36,6 @@
         <h1>Welcome To Chelle-Ghie Restobar</h1>
     </div>
     
-    <script>
-        hamburger = document.querySelector(".hamburger");
-        hamburger.onclick = function(){
-            navBar = document.querySelector(".nav-bar");
-            navBar.classList.toggle("active");
-        }
-    </script>
+    <script type="text/javascript" src="js/function.js"></script>
 </body>
 </html>
