--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css/style.css">
-    <link rel="stylesheet" href="Style.css/glow.css">
+    <link rel="stylesheet" href="Style.css/greet.css">
     <title>Home</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
     <br>
     <br>
     <br>
-    <div class="glow">
+    <div class="greet">
         <h1>Welcome To Chelle-Ghie Restobar</h1>
     </div>
     
